# Listify

./: .env.deploy  .gitignore  MIGRATIONS.md  README.md  docker-compose.yml  docker-up.sh  requirements.txt  setup.sh  start.sh  stop.sh
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/core/: config.py  database.py  exceptions.py  limiter.py  logger.py  security.py
backend/crud/: __init__.py  base.py  media.py  tag.py  tracking.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: bd0b3503d841_add_created_by_id_to_media_table.py  c23b8626b555_add_priority_to_tracking.py  cf0cba7315c7_initial_migration.py  d8cf0ac4c544_.py
backend/migrations/versions_backup/: bd0b3503d841_add_created_by_id_to_media_table.py  cf0cba7315c7_initial_migration.py  d03c328febc1_.py
backend/models/: __init__.py  anime.py  book.py  game.py  manga.py  media.py  movie.py  series.py  tag.py  tracking.py  user.py
backend/routes/: auth.py  base.py  deps.py  media.py  search.py  tracking.py
backend/schemas/: __init__.py  anime.py  book.py  game.py  manga.py  media.py  movie.py  series.py  token.py  tracking.py
backend/services/: __init__.py  base.py  igdb.py  jikan.py  openlibrary.py  tmdb.py
backend/tests/: conftest.py
backend/tests/test_crud/: test_atomic_lifecycle.py  test_crud_media.py  test_crud_tag.py  test_crud_tracking.py  test_crud_user.py
backend/tests/test_routes/: test_auth.py  test_media.py  test_search.py  test_tracking.py
backend/tests/test_services/: test_igdb_service.py  test_jikan_service.py  test_tmdb_service.py  (+1 more)
(+105 files in other folders)
